--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-    "name" : "management",
-    "version" : "1.0.0",
-    "script" : {
+    "name": "management",
+    "version": "1.0.0",
+    "scripts": {
         "client": "cd client && yarn start",
         "server": "nodemon server.js",
-        "dev":"concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+        "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
-
     "dependencies": {
-        "body-parser" : "^1.18.3",
-        "express":"^4.16.4"
+        "body-parser": "^1.18.3",
+        "express": "^4.17.1"
     },
     "devDependencies": {
-        "concurrently" : "^5.3.0"
+        "concurrently": "^5.3.0"
     }
 }
